GearsetPOC/force-app/main/default/objects/MC_Calendar_Email_Patterns__c/MC_Calendar_Email_Patterns__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MC Calendar Email Patterns</label>
</CustomObject>