GearsetPOC/force-app/main/default/objects/MC_Calendar_Email_Patterns__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>