GearsetPOC/force-app/main/default/objects/MC_Calendar_Email_Patterns__c/fields/Main_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Category__c</fullName>
    <label>Main Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>