GearsetPOC/force-app/main/default/objects/MC_Calendar_Email_Patterns__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>200</length>
    <type>Text</type>
</CustomField>