GearsetPOC/force-app/main/default/objects/MC_Calendar_Email_Patterns__c/listViews/Ibs_test.listView-meta.xml
<ListView>
    <fullName>Ibs_test</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Main_Category__c</columns>
    <columns>Matching_Pattern__c</columns>
    <columns>Subcategory__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All data</label>
    <language>en_US</language>
</ListView>